--- a/app/static/css/optimize_video.css
+++ b/app/static/css/optimize_video.css
@@ -2013,6 +2013,10 @@ html.dark .menu-item:hover {
     font-size: 1.125rem;
 }
 
+.menu-item i.spin {
+    animation: spin 1s linear infinite;
+}
+
 .menu-item + .menu-item {
     border-top: 1px solid var(--border-primary);
 }
