--- a/app/templates/tiktok_upload_studio/index.html
+++ b/app/templates/tiktok_upload_studio/index.html
@@ -117,13 +117,13 @@
                         </label>
                         <div class="privacy-options">
                             <div class="privacy-option">
-                                <input type="radio" name="privacy" id="privacyPrivate" value="SELF_ONLY" checked>
-                                <label for="privacyPrivate">
+                                <input type="radio" name="privacy" id="privacyPublic" value="PUBLIC_TO_EVERYONE" checked>
+                                <label for="privacyPublic">
                                     <div class="privacy-header">
-                                        <i class="ph ph-lock"></i>
-                                        <span>Private (Self Only)</span>
+                                        <i class="ph ph-globe"></i>
+                                        <span>Public</span>
                                     </div>
-                                    <p>Only you can see this video (Recommended for testing)</p>
+                                    <p>Everyone can see this video</p>
                                 </label>
                             </div>
 
@@ -139,13 +139,13 @@
                             </div>
 
                             <div class="privacy-option">
-                                <input type="radio" name="privacy" id="privacyPublic" value="PUBLIC_TO_EVERYONE">
-                                <label for="privacyPublic">
+                                <input type="radio" name="privacy" id="privacyPrivate" value="SELF_ONLY">
+                                <label for="privacyPrivate">
                                     <div class="privacy-header">
-                                        <i class="ph ph-globe"></i>
-                                        <span>Public</span>
+                                        <i class="ph ph-lock"></i>
+                                        <span>Private (Self Only)</span>
                                     </div>
-                                    <p>Everyone can see this video</p>
+                                    <p>Only you can see this video (Use for testing)</p>
                                 </label>
                             </div>
                         </div>
