--- a/app/templates/core/home.html
+++ b/app/templates/core/home.html
@@ -256,10 +256,10 @@
             <div class="card border-0 shadow-sm h-100">
                 <div class="card-body">
                     <div class="text-center mb-3">
-                        <i class="ph ph-hash text-success" style="font-size: 2.5rem;"></i>
+                        <i class="ph ph-upload text-success" style="font-size: 2.5rem;"></i>
                     </div>
-                    <h5 class="card-title text-center">Titles & Hashtags</h5>
-                    <p class="text-muted text-center">Generate optimized titles and hashtags</p>
+                    <h5 class="card-title text-center">Upload Studio</h5>
+                    <p class="text-muted text-center">Generate titles, hashtags & upload to TikTok</p>
                 </div>
             </div>
         </div>
