--- a/app/templates/home/dashboard.html
+++ b/app/templates/home/dashboard.html
@@ -348,7 +348,7 @@
                     </div>
                     <div class="preview-feature">
                         <i class="ph ph-check-circle"></i>
-                        <span>Titles & Hashtags</span>
+                        <span>Upload Studio</span>
                     </div>
                     <div class="preview-feature">
                         <i class="ph ph-check-circle"></i>
