--- a/app/templates/tiktok_upload_studio/index.html
+++ b/app/templates/tiktok_upload_studio/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="TikTok upload, TikTok API, video upload, TikTok publishing, content posting, TikTok automation">
 {% endblock %}
 
-{% block title %}Upload Studio - TikTok | Creatrics{% endblock %}
+{% block title %}Upload Studio | Creatrics{% endblock %}
 
 {% block additional_styles %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/tiktok_upload_studio.css') }}">
@@ -18,7 +18,7 @@
         <div class="generator-header">
             <h1 class="generator-title">
                 <i class="ph ph-upload"></i>
-                Upload Studio - TikTok
+                Upload Studio
             </h1>
         </div>
 
